Cleaning + some tests